--- a/style.css
+++ b/style.css
@@ -12,33 +12,82 @@
   font-style: italic;
 }
 
-html, body, div, h1, p, blockquote, a, cite, img, ul, li, section {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+html, body, div, span,
+h1, h2, h3, h4, h5, h6, p,
+strong, a, blockquote, cite,
+section, figure {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 
-ul {
-  list-style: none;
-}
+/* Colors */
 
-blockquote {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
+.bg-cl-dark-blue {
   background: #05090d;
-  color: #fff;
-  font: 18px/1.75 Charter, Palatino, serif;
+}
+
+.bg-cl-red-gradient {
+  background: #a52714;
+  background: linear-gradient(to bottom, #48062b, #7d2d21);
+}
+
+.bg-cl-light-gray {
+  background-color: #f5f5f5;
+}
+
+.cl-cyan {
+  color: #00e5ff;
+}
+
+.cl-light-salmon {
+  color: #eda29b;
+}
+
+.cl-salmon {
+  color: #e06055;
+}
+
+/* Typography */
+
+.charter {
+  font-family: Charter, Palatino, serif;
+}
+
+.gill-sans {
+  font-family: 'Gill Sans', Arial, sans-serif;
+}
+
+.lh-large {
+  line-height: 1.75;
+}
+
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Spacing */
+
+.mnh1 {
+	margin-left: -.25rem;
+	margin-right: -.25rem;
+}
+
+/* Other styles */
+
+.shadow-icon {
+  box-shadow: 0 1px 2px 1px rgba(0,0,0,.1)
+}
+
+.w-icon {
+	width: 3rem;
+}
+
+.br-icon {
+	border-radius: .75rem;
 }
 
 canvas {
@@ -46,112 +95,4 @@ canvas {
   left: 0;
   top: 0;
   pointer-events: none;
-  z-index: -1;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  border-bottom: 1px solid #fff;
-}
-
-section {
-  padding: 0 80px;
-}
-
-.self {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.self-name {
-  color: #00E5FF;
-  font-size: 24px;
-  letter-spacing: 6px;
-  text-transform: uppercase;
-}
-
-.self-links {
-  color: rgba(255, 255, 255, 0.75);
-  margin-top: 40px;
-}
-
-.self-links li {
-  font-family: 'Gill Sans', Arial, sans-serif;
-  font-size: 13px;
-  margin: 8px 0;
-  text-transform: uppercase;
-}
-
-.self-links .spaced {
-  letter-spacing: 4px;
-}
-
-.quotes {
-  background: #a52714;
-  background: linear-gradient(to bottom, #48062b, #7d2d21);
-  color: #eda29b;
-  padding-top: 64px;
-  padding-bottom: 64px;
-}
-
-.quotes-quote {
-  max-width: 800px;
-  padding: 40px 0;
-}
-
-.quotes-quote p {
-  margin-bottom: 1em;
-}
-
-.quotes-quote strong {
-  color: #fff;
-  font-weight: normal;
-}
-
-.quotes-citation {
-  color: #e06055;
-  display: block;
-  margin-top: 1em;
-}
-
-.quotes-citation p {
-  margin: 0;
-}
-
-.quotes-author {
-  font-family: 'Gill Sans', Arial, sans-serif;
-  font-size: 13px;
-  letter-spacing: 4px;
-  text-transform: uppercase;
-}
-
-.quotes-book {
-  font-style: italic;
-  font-size: 16px;
-}
-
-@media (max-width: 600px) {
-  body {
-    font-size: 16px;
-  }
-
-  section {
-    padding: 0 40px;
-  }
-
-  .quotes {
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
-
-
-  .quotes-quote {
-    padding: 24px 0;
-  }
 }
