Portfolio presentations - edit pass

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,7 @@
     </nav>
     <main class="charter note f6 lh-copy mw7 center pa4 pt4 pa5-ns">
       <a
-        href="/posts.html"
+        href="/posts"
         class="dib mb2 mb0-ns mt1-ns fl-ns nl5-ns bg-light-gray hover-bg-moon-gray pa2 br-pill"
         style="width: 40px; height: 40px;"
         ><img src="/images/arrow-left.svg"
