Type size tweaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@
         </li>
       </ul>
     </nav>
-    <main class="charter note f6 lh-copy mw7 center pa4 pt4 pa5-ns">
+    <main class="charter post f5 lh-copy cl-mw center pa4 pt4 pa5-ns">
       <a
         href="/posts"
         class="dib mb2 mb0-ns mt1-ns fl-ns nl5-ns bg-light-gray hover-bg-moon-gray pa2 br-pill"
@@ -57,7 +57,7 @@
           {{page.title}}
         </h1>
         <div>{{page.date | date: "%B %-d, %Y"}}</div>
-        <div class="mt4">
+        <div class="mt4 lh-large">
           {{content}}
         </div>
       </div>
