--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@
         ><img src="/images/arrow-left.svg"
       /></a>
       <div>
-        <h1 class="f2 b mb2 lh-title cl-blue">
+        <h1 class="f2 fw6 mb2 lh-title cl-blue">
           {{page.title}}
         </h1>
         <div>{{page.date | date: "%B %-d, %Y"}}</div>
