--- a/style.css
+++ b/style.css
@@ -21,39 +21,16 @@
 
 @font-face {
   font-family: "iA Writer Quattro";
-  font-weight: normal;
   font-style: normal;
-  src: url("/webfonts/iAWriterQuattroS-Regular.eot") format("embedded-opentype"),
-    url("/webfonts/iAWriterQuattroS-Regular.woff2") format("woff2"),
-    url("/webfonts/iAWriterQuattroS-Regular.woff") format("woff");
+  font-weight: 1 999;
+  src: url("/webfonts/iAWriterQuattroV.ttf");
 }
 
 @font-face {
   font-family: "iA Writer Quattro";
-  font-weight: normal;
   font-style: italic;
-  src: url("/webfonts/iAWriterQuattroS-Italic.eot") format("embedded-opentype"),
-    url("/webfonts/iAWriterQuattroS-Italic.woff2") format("woff2"),
-    url("/webfonts/iAWriterQuattroS-Italic.woff") format("woff");
-}
-
-@font-face {
-  font-family: "iA Writer Quattro";
-  font-weight: bold;
-  font-style: normal;
-  src: url("/webfonts/iAWriterQuattroS-Bold.eot") format("embedded-opentype"),
-    url("/webfonts/iAWriterQuattroS-Bold.woff2") format("woff2"),
-    url("/webfonts/iAWriterQuattroS-Bold.woff") format("woff");
-}
-
-@font-face {
-  font-family: "iA Writer Quattro";
-  font-weight: bold;
-  font-style: italic;
-  src: url("/webfonts/iAWriterQuattroS-BoldItalic.eot")
-      format("embedded-opentype"),
-    url("/webfonts/iAWriterQuattroS-BoldItalic.woff2") format("woff2"),
-    url("/webfonts/iAWriterQuattroS-BoldItalic.woff") format("woff");
+  font-weight: 1 999;
+  src: url("/webfonts/iAWriterQuattroV-Italic.ttf");
 }
 
 @media (prefers-color-scheme: dark) {
@@ -173,7 +150,14 @@ canvas {
   pointer-events: none;
 }
 
-.post ol {
+.list-hyphen li::before,
+.post li::before {
+  content: "-";
+}
+
+.post ul,
+ol {
+  list-style: none;
   padding: 0;
 }
 
@@ -188,7 +172,7 @@ canvas {
 }
 
 .post strong {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .post p {
@@ -197,6 +181,6 @@ canvas {
 
 .post h2 {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 600;
   margin-top: 2rem;
 }
