--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
     </script>
   </head>
   <body class="bg-near-white dark-gray">
-    <nav class="gill-sans f6 ttu w-100 bb b--black-10">
+    <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100">
       <ul
         class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
       >
@@ -54,7 +54,7 @@
         </li>
       </ul>
     </nav>
-    <main class="charter post f5 lh-copy cl-mw center pa4 pt4 pa5-ns">
+    <main class="charter post f5 lh-copy cl-mw center pa4 pt6 pa5-ns pt6-ns">
       <a
         href="/posts"
         class="dib mb2 mb0-ns mt1-ns fl-ns nl5-ns bg-light-gray hover-bg-moon-gray pa2 br-pill"
