--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
+  .invert-dark {
     filter: invert(100%) hue-rotate(180deg);
   }
 
-  img,
-  video,
-  iframe {
+  .invert-dark img,
+  .invert-dark video,
+  .invert-dark iframe {
     filter: invert(100%) hue-rotate(-180deg);
   }
 }
