Fix unintentional nav vertical scroll

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
       _gaq.push(["_setAccount", "UA-19583432-1"]);
       _gaq.push(["_trackPageview"]);
 
-      (function () {
+      (function() {
         var ga = document.createElement("script");
         ga.type = "text/javascript";
         ga.async = true;
@@ -30,7 +30,7 @@
   <body class="bg-near-white dark-gray">
     <nav class="fixed top-0 bg-near-white gill-sans f6 ttu w-100 z-1">
       <ul
-        class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-auto"
+        class="fw6 list ph4 ph5-ns flex-ns flex-row cl-mw center items-center nowrap overflow-x-auto"
       >
         <li class="dib mr4 flex-auto">
           <a href="/" class="link dark-gray hover-cl-blue pv3"
